--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     box-sizing: border-box;
 }
+
 body {
     background-color: #935d8c;
     background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
@@ -31,19 +32,93 @@ header img {
     max-width: 75px;
 }
 
-nav {
-    background-color: #f7f7f7;
-    padding: 1em;
-    border-radius: 0.25em 0.25em 0 0 ;
-}
 
 
+   body {
+    font-family: cursive;
+   }
+   a {
+    text-decoration: none;
+   }
+   li {
+    list-style: none;
+   }
 
-ul {
+   /* NAVBAR STYLING STARTS */
+.navbar {
     display: flex;
-    list-style-type: none;
-    justify-content: space-around;
-}
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+    background-color: #f7f7f7;
+    padding: 0 30px 0 0  ;
+    border-radius: 0.25em 0.25em 0 0 ;
+   }
+   .nav-links a {
+    color: #636363;
+   }
+   /* LOGO */
+   .logo {
+    font-size: 32px;
+   }
+   /* NAVBAR MENU */
+   .menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+   }
+   .menu li:hover {
+    background-color: #5e4d9360;;
+    border-radius: 5px;
+    transition: 0.3s ease;
+   }
+   .menu li {
+    padding: 5px 14px;
+   }
+
+   /*RESPONSIVE NAVBAR MENU STARTS*/
+/* CHECKBOX HACK */
+input[type=checkbox]{
+    display: none;
+   } 
+   /*HAMBURGER MENU*/
+   .hamburger {
+    display: none;
+    font-size: 24px;
+    user-select: none;
+   }
+   /* APPLYING MEDIA QUERIES */
+   @media (max-width: 768px) {
+    .navbar {
+        justify-content: end;
+       }
+   .menu { 
+    display:none;
+    position: absolute;
+    background-color:#f7f7f7;
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 16px 0;
+    margin: 0 8px 0 8px;
+   }
+   .menu li:hover {
+    display: inline-block;
+    background-color:#5e4d9360;
+    transition: 0.3s ease;
+   }
+   .menu li + li {
+    margin-top: 12px;
+   }
+   input[type=checkbox]:checked ~ .menu{
+    display: block;
+   }
+   .hamburger {
+    display: block;
+   }
+
+   }
+
 
 #main {
     background-color: #ffffff;
